--- a/docs/modules/trino/pages/usage-guide/log_aggregation.adoc
+++ b/docs/modules/trino/pages/usage-guide/log_aggregation.adoc
@@ -1,7 +1,7 @@
 = Log aggregation
+:description: The logs can be forwarded to a Vector log aggregator by providing a discovery ConfigMap for the aggregator and by enabling the log agent
 
-The logs can be forwarded to a Vector log aggregator by providing a discovery
-ConfigMap for the aggregator and by enabling the log agent:
+The logs can be forwarded to a Vector log aggregator by providing a discovery ConfigMap for the aggregator and by enabling the log agent:
 
 [source,yaml]
 ----
@@ -19,7 +19,7 @@ spec:
                 level: INFO
 ----
 
-Currently, the logs are collected only for `server.log`. Logging for `http-request.log` is disabled by default.
+Currently, the logs are collected only for `server.log`.
+Logging for `http-request.log` is disabled by default.
 
-Further information on how to configure logging, can be found in
-xref:concepts:logging.adoc[].
+Further information on how to configure logging, can be found in xref:concepts:logging.adoc[].
