--- a/docs/modules/trino/pages/usage-guide/monitoring.adoc
+++ b/docs/modules/trino/pages/usage-guide/monitoring.adoc
@@ -1,4 +1,5 @@
 = Monitoring
+:description: The managed Trino instances are automatically configured to export Prometheus metrics.
 
-The managed Trino instances are automatically configured to export Prometheus metrics. See
-xref:operators:monitoring.adoc[] for more details.
+The managed Trino instances are automatically configured to export Prometheus metrics.
+See xref:operators:monitoring.adoc[] for more details.
