--- a/docs/modules/trino/pages/usage-guide/query.adoc
+++ b/docs/modules/trino/pages/usage-guide/query.adoc
@@ -1,6 +1,8 @@
 = Testing Trino with Hive and S3
+:description: Test Trino with Hive and S3 by creating a schema and table for Iris data in Parquet format, then querying the dataset.
 
-Create a schema and a table for the Iris data located in S3 and query data. This assumes to have the Iris data set in the `PARQUET` format available in the S3 bucket which can be downloaded https://www.kaggle.com/gpreda/iris-dataset/version/2?select=iris.parquet[here].
+Create a schema and a table for the Iris data located in S3 and query data.
+This assumes to have the Iris data set in the `PARQUET` format available in the S3 bucket which can be downloaded https://www.kaggle.com/gpreda/iris-dataset/version/2?select=iris.parquet[here].
 
 == Create schema
 [source,sql]
